Fix double border in WAT examples (#1004)
* Apply border-radius in JS frame

* Add border around every type of example

--- a/editor/css/tabbed-editor.css
+++ b/editor/css/tabbed-editor.css
@@ -75,7 +75,6 @@
 
 .console-container {
   position: relative;
-  border-top: 1px solid var(--border-primary);
   padding-top: 0.5rem;
 }
 
